--- a/Website/users/static/users/styles.css
+++ b/Website/users/static/users/styles.css
@@ -200,3 +200,78 @@ h1 img, h1 span {
     display: inline-block;
     vertical-align: middle;
 }
+
+
+/* Product information container */
+.product-info {
+    margin: 20px;
+    padding: 20px;
+    background-color: #f7f0e6;
+    border-radius: 20px;
+    display: flex; /* Add flexbox layout */
+    font-size: large;
+}
+
+/* Image container */
+.image-container {
+    flex:0.5;
+    z-index: 1; /* Ensure image remains visible */
+    border-radius:50px;
+    height: auto;
+}
+
+
+
+
+/* Description container */
+.description-container {
+    flex: 1; /* Take up 50% of the width */
+    padding-left: 20px; /* Add spacing between image and description */
+}
+
+/* Product name */
+.product-info h2 {
+    font-size: 24px; /* Adjust font size as needed */
+    color: #333; /* Adjust text color as needed */
+}
+
+/* Product description */
+.product-info p {
+    font-size: large; /* Adjust font size as needed */
+    color: #666; /* Adjust text color as needed */
+    margin-bottom: 10px; /* Adjust margin as needed */
+}
+
+/* Product price */
+.product-info p.price {
+    font-size: 18px; 
+    color: #007bff; 
+    font-weight: bold;  
+}
+
+/* Add to cart button */
+.product-info button {
+    background-color:red;
+    color: darkred;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.product-info button:hover {
+    background-color: #0056b3; /* Set hover color as needed */
+}
+.product-info select{
+    width: 80px;
+    height: 50px;
+    font-size: large;
+}
+.product-info input[type=number]{
+    width: 70px;
+    height: 50px;
+    font-size: large;
+    text-align: center;    
+}
+
