--- a/Website/users/templates/users/home.html
+++ b/Website/users/templates/users/home.html
@@ -1,13 +1,15 @@
 {% extends 'users/layout.html' %}
 {% block body %}
 {% load static %}
-<a href="product.html">
-    <div class="product">
-        <img src="{%static "users/kurta1.jpg"%}" alt="Kurta1">
-        <h2>Kurta 1</h2>
-        <p>Price: $50</p>
-        <button>Add to Cart</button>
-        <button>Buy Now</button>
-    </div>
-</a>
+{% for kurta in Kurtas %}
+    <a href="product.html">
+        <div class="product">
+            <img src="{{kurta.image.url}}" alt="Kurta1">
+            <h2>{{kurta.name}}</h2>
+            <p>Price: {{kurta.price}}</p>
+            <button>Add to Cart</button>
+            <button>Buy Now</button>
+        </div>
+    </a>
+{% endfor %}
 {% endblock %}
