--- a/Website/users/templates/users/register.html
+++ b/Website/users/templates/users/register.html
@@ -3,15 +3,21 @@
     <a href="{% url 'home' %}">Home</a>
 {% endblock %}
 {% block body %}
+    
+
     <form action="{% url 'register' %}">
         {% csrf_token %}
-        <input type="text" name = "username" placeholder="username">
-        <input type="text" name = "first_name" placeholder="first name">
-        <input type="text" name = "last_name" placeholder="last name">
-        <input type="email" name = "email" placeholder="Enter your Email-id">
-        <input type="password" name="password">
-        <input type="number" name="" id="">
-        <input type="submit" value="SignUp">
+        <p>Name :<input type="text" name = "First Name" placeholder="first name"><input type="text" name = "Last Name" placeholder="last name"></p>
+        <p>Number : <input type="number" name="phone" required></p>
+        <p>E-mail : <input type="email" name="email" required></p>
+        <br>
+        <p>Username : <input type="text" name="username" required></p>
+        <p>Password : <input type="password" name="password" required></p>
+        <p>Confirm Password : <input type="password" name="password" required></p>
+
+        <input type="submit" value="Register">
+        <hr>
+        <p><a href="{% url 'login' %}">Login</a></p>
     </form>
     
     
