Added View Cart Feature

--- a/Website/users/templates/users/home.html
+++ b/Website/users/templates/users/home.html
@@ -1,11 +1,17 @@
 {% extends 'users/layout.html' %}
 {% load static %}
+
 {% block nav %}
     <p style="position: absolute; top: 0; right: 0;"><a href="{% url 'login' %}">Login</a> <a href="{% url 'register' %}">Register</a></p>
     <p><a href="#">Shop by Design</a>    <a href="#">Shop by Fabric</a>     <a href="#">Shop by Occasion</a></p>
 {% endblock %}
 {% block body %}
-{% for kurta in Kurtas %}
+
+{% if request.user.is_authenticated %}
+    <a href="{% url 'Cart' username=userName %}">View Cart</a>
+{% endif %}
+    {% for kurta in Kurtas %}
+
     <a href="{% url 'product_label' kurta.name %}">
         <div class="product">
             <img src="{{ kurta.image.url }}" alt="Kurta1">
