--- a/Website/users/templates/users/layout.html
+++ b/Website/users/templates/users/layout.html
@@ -1,31 +1,44 @@
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Lifestyles Mens</title>
-        <link rel="stylesheet" type="text/css" href="{% static 'users/styles.css' %}">   
-        
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lifestyles Mens</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'users/styles.css' %}">   
+</head>
+
+<header>
+    <h1><img src="{% static 'users/logo.png'%}" width="150px">Lifestyle Men's</h1>
+    <h4>Discover the latest trends in Kurtas</h4>
+    <p style="position: absolute; top: 0; right: 0;">
+        {% if request.user.is_authenticated %}
+            <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'register' %}">Register</a>
+        {% endif %}
+    </p>
+    <a href="{% url 'home' %}">Home</a>
     
-    <header>
-        <h1><img src="{%static 'users/logo.png'%}" width="150px">Lifestyle Men's</h1>
-        <h4>Discover the latest trends in Kurtas</h4>
-        
+
     <nav>
         {% block nav %}
 
         {% endblock %}
     </nav>
 </header>
+
 <body>
     {% block body %}
     
     {% endblock %}
 </body>
+
 <footer>
-    <a href="about.html">About Us       Contact Us</a>
+    <a href="about.html">About Us</a> | <a href="#">Contact Us</a>
     <p>© 2024 Fashion Ecommerce. All rights reserved.</p>
 </footer>
+
 </html>
