--- a/Website/users/templates/users/layout.html
+++ b/Website/users/templates/users/layout.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lifestyles Mens</title>
     <link rel="stylesheet" type="text/css" href="{% static 'users/styles.css' %}">   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 </head>
 
 <header>
@@ -14,7 +16,8 @@
     <h4>Discover the latest trends in Kurtas</h4>
     <p style="position: absolute; top: 0; right: 0;">
         {% if request.user.is_authenticated %}
-            <a href="{% url 'logout' %}">Logout</a>
+        <a href="{% url 'logout' %}">Logout</a>
+        <a href="{% url 'Cart' username=request.user.username %}"><i class="fas fa-shopping-cart"></i></a>
         {% else %}
             <a href="{% url 'login' %}">Login</a>
             <a href="{% url 'register' %}">Register</a>
