--- a/Website/users/static/users/styles.css
+++ b/Website/users/static/users/styles.css
@@ -1,3 +1,12 @@
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f7f0e6;
@@ -31,27 +40,47 @@ footer {
 .title a {
     margin-left: 10px;
 }
-
-nav {
-    background-color: #444;
-    padding: 10px;
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 8%;
 }
-
-nav a {
-    color: #f65a5a;
+nav .logo{
+    font-size: 32px;
+    font-weight: 500;
+    cursor: pointer;
+}
+nav ul li{
+    list-style: none;
+    display: inline-block;
+}
+nav ul li a{
+    display: block;
+    margin: 0 10px;
+    color: #000;
+    font-weight: 500;
     text-decoration: none;
-    margin-right: 10px;
+    font-size: 17px;
+    position: relative;
 }
-nav p{
-    color: #f65a5a;
+nav ul li a::before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    width: 0;
+    height: 2.5px;
+    transition: all 0.3s ease;
 }
-
-nav a:hover {
-    color: #90abc7; /* Set hover color for navigation links as needed */
+nav ul li a:hover::before{
+    width: 100%;
 }
-
-a:hover {
-    color: #0056b3; /* Set hover color as needed */
+nav ul i{
+    font-size: 20px;
+    margin-left: 10px;
+    cursor: pointer;
 }
 
 
@@ -95,7 +124,7 @@ a:hover {
     color: #fff;
     border: none;
     padding: 5px 5px;
-    cursor: pointer;
+        cursor: pointer;
     border-radius: 5px;
     font-size: large;
     size: auto;
@@ -307,4 +336,107 @@ h1 img, h1 span {
 }
 .CartContent h5 {
     margin: 0; /* Remove default margin */
+}
+
+.quantity-selector {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.quantity-selector input {
+    width: 50px;
+    text-align: center;
+    border: none;
+    outline: none;
+}
+
+.quantity-selector button {
+    background-color: #f0f0f0;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 5px 10px;
+}
+
+.container{
+  justify-content: center;
+  align-items: center;
+  padding:25px;
+  min-height: 100vh;
+  background: linear-gradient(90deg, #2ecc71 60%, #27ae60 40.1%);
+}
+
+.container form{
+  padding:20px;
+  width:700px;
+  background: #fff;
+  box-shadow: 0 5px 10px rgba(0,0,0,.1);
+}
+
+.container form .row{
+  display: flex;
+  flex-wrap: wrap;
+  gap:15px;
+}
+
+.container form .row .col{
+  flex:1 1 250px;
+}
+
+.container form .row .col .title{
+  font-size: 20px;
+  color:#333;
+  padding-bottom: 5px;
+  text-transform: uppercase;
+}
+
+.container form .row .col .inputBox{
+  margin:15px 0;
+}
+
+.container form .row .col .inputBox span{
+  margin-bottom: 10px;
+  display: block;
+}
+
+.container form .row .col .inputBox input{
+  width: 100%;
+  border:1px solid #ccc;
+  padding:10px 15px;
+  font-size: 15px;
+  text-transform: none;
+}
+
+.container form .row .col .inputBox input:focus{
+  border:1px solid #000;
+}
+
+.container form .row .col .flex{
+  display: flex;
+  gap:15px;
+}
+
+.container form .row .col .flex .inputBox{
+  margin-top: 5px;
+}
+
+.container form .row .col .inputBox img{
+  height: 34px;
+  margin-top: 5px;
+  filter: drop-shadow(0 0 1px #000);
+}
+
+.container form .submit-btn{
+  width: 100%;
+  padding:12px;
+  font-size: 17px;
+  background: #27ae60;
+  color:#fff;
+  margin-top: 5px;
+  cursor: pointer;
+}
+
+.container form .submit-btn:hover{
+  background: #16a8c9;
 }
