--- a/Website/users/templates/users/ViewCart.html
+++ b/Website/users/templates/users/ViewCart.html
@@ -2,15 +2,27 @@
 {% load static %}
 
 {% block body %}
-    {% for kurta in kurtas %}
+    {% for cart_item in cartView %}
+    <a href="{% url 'product' kurta_id=cart_item.kurta.id %}">
         <div class="CartBox">
-            <img src="{{ kurta.image.url }}" alt="Kurta1">
+            <img src="{{ cart_item.kurta.image.url }}" alt="Kurta1">
             <div class="CartContent">
-                <h5>Name:{{ kurta.name }}</h5>
-                <h5>Price:{{ kurta.price }}</h5>
-                <h5>Quantity:{{ kurta.quantity }}</h5>
-                <button>Buy Now</button>
+                <h5>Name:{{ cart_item.kurta.name }}</h5>
+                <h5>Price:{{ cart_item.kurta.price }}</h5>
+                <h5>Quantity:{{ cart_item.quantity }}</h5>
+                <form action="{% url 'Cart' username=request.user.username %}" method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="remove" value="remove">
+                    <input type="hidden" name="kurta_id" value="{{cart_item.kurta.id}}">
+                    <button>Remove</button>
+                </form>
             </div>
         </div>
+    </a>
     {% endfor %}
+        <a href="{% url 'BuyNow' username=request.user.username %}">
+
+            <button name="Buy-Now" value="BuyNow">Buy Now</button>
+        </a>
+        
 {% endblock %}
