--- a/Website/users/templates/users/product.html
+++ b/Website/users/templates/users/product.html
@@ -1,7 +1,6 @@
 {% extends "users/layout.html" %}
 {% load static %}
 {% block nav %}
-    <p style="position: absolute; top: 0; right: 0;"><a href="{% url 'login' %}">Login</a> <a href="{% url 'register' %}">Register</a></p>
     <a href="{% url 'home' %}" style="text-align: left;">Home</a>
     <p><a href="#">Shop by Design</a>    <a href="#">Shop by Fabric</a>     <a href="#">Shop by Occasion</a></p>
 {% endblock %}
@@ -11,27 +10,31 @@
     <div class="product-info">
         <img class="image-container"  src="{{kurta.image.url}}" alt="Product Image" >
         <div class="description-container">
-            <h1>{{kurta.name}}</h1>
+            <h1>{{ kurta.name }}</h1>
             <label for="size">Size:</label>
-            <select id="size" name="size">
-                <option value="s">S</option>
-                <option value="m">M</option>
-                <option value="l">L</option>
-                <option value="xl">XL</option>
-                <option value="xxl">XXL</option>
-            </select>
-            <label for="quantity">Quantity:</label>
-            <input type="number" id="quantity" name="quantity" value="1" min="1">
             <p class="description">Elegant kurta with intricate design patterns. Perfect for both casual and formal occasions.</p>
             <p>Price: {{ kurta.price }}</p>
             <p>Fabric: {{ kurta.fabric }}</p>
             <p>Design: {{kurta.design}}</p>
             <form action="{% url 'product' kurta_id=kurta.id %}", method="post">
                 {% csrf_token %}
+                <select id="size" name="size">
+                    <option value="s">S</option>
+                    <option value="m">M</option>
+                    <option value="l">L</option>
+                    <option value="xl">XL</option>
+                </select>
+     
+                {% csrf_token %}
+                <div class="quantity-selector">
+                    <p>Quantity</p>
+                    <input type="text" name="quantity" id="quantity" min="1" max="9" required>
+               
+                </div>
                 <input type="hidden" name="action" value="Add-to-Cart">
                 <button type="submit">Add to Cart</button>
-
-            <form action="{% url 'product' kurta_id=kurta.id %}", method="post">
+            </form>
+                <form action="{% url 'product' kurta_id=kurta.id %}", method="post">
                 {% csrf_token %}
                 <input type="hidden" name="action" value="Buy Now">
                 <button type="submit">Buy Now</button>
