--- a/Website/users/templates/users/product.html
+++ b/Website/users/templates/users/product.html
@@ -8,7 +8,7 @@
 {% block body %}
 <div>
     <div class="product-info">
-        <img class="image-container"  src="{{kurta.image.url}}" alt="Product Image" >
+        <img class="image-container"  src="{{kurta.main_image.url}}" alt="Product Image" >
         <div class="description-container">
             <h1>{{ kurta.name }}</h1>
             <label for="size">Size:</label>
