--- a/Website/users/templates/users/home.html
+++ b/Website/users/templates/users/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block nav %}
-    <!-- <p style="position: absolute; top: 0; right: 0;"><a href="{% url 'login' %}">Login</a> <a href="{% url 'register' %}">Register</a></p> -->
+<!-- <p style="position: absolute; top: 0; right: 0;"><a href="{% url 'login' %}">Login</a> <a href="{% url 'register' %}">Register</a></p> -->
 
 {% endblock %}
 {% block body %}
@@ -14,65 +14,62 @@
         <input type="hidden" name="action" value="fabric">
         <ul style="font-size: 12px;">
             {% for fabric in fabrics %}
-           
-            
+
+
             <li style="list-style: none;">
-                <input type="hidden" name="{{fabric.id}}" value="false">
-                <input type="checkbox" name="{{fabric.id}}" value="true" style="display: block-inline;">
-                
-                {{fabric}}
+                <label for="{{fabric}}">
+                    <input type="checkbox" name="fabric[]" id="{{fabric}}" value="{{fabric.id}}"
+                        style="display: block-inline;">
+                    {{fabric}}
+
+                </label>
+
             </li>
             {% endfor %}
-            <button type="submit">apply</button>
 
         </ul>
         <h5>Shop by Design</h5>
-
-        <input type="hidden" name="action" value="fabric">
         <ul style="font-size: 12px;">
             {% for design in Design %}
-           
-                <li style="list-style: none;">  
-                    <input type="hidden" name="{{design.id}}" value="false">
-                    <input type="checkbox" name="{{design.id}}" value="true" style="display: block-inline;">
-         
+
+            <li style="list-style: none;">
+                <label for="{{design}}">
+                    <input type="checkbox" name="design[]" id="{{design}}" value="{{design.id}}"
+                        style="display: block-inline;">
                     {{design}}
-                </li>
+
+                </label>
+            </li>
             {% endfor %}
-            <button type="submit">apply</button>
 
         </ul>
 
         <h5>Shop by Color</h5>
-
-        <input type="hidden" name="action" value="color">
         <ul style="font-size: 12px;">
             {% for color in colors %}
-           
-            
             <li style="list-style: none;">
-            <input type="hidden" name="{{color.id}}" value="false">
-                <input type="checkbox" name="{{color.id}}" value="true" style="display: block-inline;">
-         
+
+
+            <label for="{{color}}">
+                <input type="checkbox" name="color[]" id="{{color}}" value="{{color.id}}" style="display: block-inline;">
                 {{color}}
+
+            </label>
             </li>
             {% endfor %}
-            <button type="submit">apply</button>
 
         </ul>
 
         <h5>Shop by Occasion</h5>
-
-        <input type="hidden" name="action" value="fabric">
         <ul style="font-size: 12px;">
             {% for occ in Occasion %}
-           
-            
             <li style="list-style: none;">
-            <input type="hidden" name="{{occ.id}}" value="false">
-                <input type="checkbox" name="{{occ.id}}" value="true" style="display: block-inline;">
-         
-                {{occ}}
+                <label for="{{occ}}">
+                    <input type="checkbox" name="occ[]" id="{{occ}}" value="{{occ.id}}"
+                        style="display: block-inline;">
+                    {{occ}}
+
+                </label>
             </li>
             {% endfor %}
             <button type="submit">apply</button>
@@ -85,7 +82,7 @@
     <div class="right-box">
 
         {% for kurta in Kurtas %}
-        
+
         <a href="{% url 'product' kurta_id=kurta.id %}">
             <div class="product">
                 <img src="{{ kurta.main_image.url }}" alt="Kurta1">
@@ -96,5 +93,5 @@
         {% endfor %}
     </div>
 
-    </div>
-        {% endblock %}
+</div>
+{% endblock %}
