--- a/Website/users/templates/users/BuyNow.html
+++ b/Website/users/templates/users/BuyNow.html
@@ -4,112 +4,113 @@
 {% block body %}
 <div class="container">
   <h1>Place Your Order</h1>
-  
+
   <!-- Order Summary -->
-  
+
   {% for cart_item in cart_list %}
 
-    <div class="product">
-      <img src="{{cart_item.kurta.image.url}}" alt="">
-      <p>Product Name:{{cart_item.kurta.name }}</p>
-      <p>Price:{{ cart_item.kurta.price }}</p>
-      <p>Quantity: {{cart_item.quantity }}</p>
-      <p>Size: {{cart_item.size }}</p>
-      
-    </div>
+  <div class="product">
+    <img src="{{cart_item.kurta.main_image.url}}" alt="">
+    <p>Product Name:{{cart_item.kurta.name }}</p>
+    <p>Price:{{ cart_item.kurta.price }}</p>
+    <p>Quantity: {{cart_item.quantity }}</p>
+    <p>Size: {{cart_item.size }}</p>
+    <p>Ship by :
+      {{sdate}},{{sday}}
+    </p>
+  </div>
   {% endfor %}
   <h2>Order Summary</h2>
   <div class="order-summary">
-  
-    <p>Product Name: Product Name</p>
-    <p>Price: $XX.XX</p>
+
+    <p>Sub-Total : {{sub_total}}</p>
+    <p>Shipping-Price: {{ship_price}}</p>
+    <hr>
+    <p>Total: {{total}}</p>
     <p>Quantity: 1</p>
 
-    
+
   </div>
-  
+
   <div class="container">
 
     <form action="">
 
-        <div class="row">
+      <div class="row">
 
-            <div class="col">
+        <div class="col">
 
-                <h3 class="title">billing address</h3>
+          <h3 class="title">billing address</h3>
 
-                <div class="inputBox">
-                    <span>full name :</span>
-                    <input type="text" placeholder="john deo">
-                </div>
-                <div class="inputBox">
-                    <span>email :</span>
-                    <input type="email" placeholder="example@example.com">
-                </div>
-                <div class="inputBox">
-                    <span>address :</span>
-                    <input type="text" placeholder="room - street - locality">
-                </div>
-                <div class="inputBox">
-                    <span>city :</span>
-                    <input type="text" placeholder="mumbai">
-                </div>
+          <div class="inputBox">
+            <span>full name :</span>
+            <input type="text" placeholder="Name">
+          </div>
+          <div class="inputBox">
+            <span>email :</span>
+            <input type="email" placeholder="example@example.com">
+          </div>
+          <div class="inputBox">
+            <span>address :</span>
+            <input type="text" placeholder="room - street - locality">
+          </div>
+          <div class="inputBox">
+            <span>city :</span>
+            <input type="text" placeholder="pune">
+          </div>
 
-                <div class="flex">
-                    <div class="inputBox">
-                        <span>state :</span>
-                        <input type="text" placeholder="india">
-                    </div>
-                    <div class="inputBox">
-                        <span>zip code :</span>
-                        <input type="text" placeholder="123 456">
-                    </div>
-                </div>
-
+          <div class="flex">
+            <div class="inputBox">
+              <span>state :</span>
+              <input type="text" placeholder="india">
             </div>
-
-            <div class="col">
-
-                <h3 class="title">payment</h3>
-
-                <div class="inputBox">
-                    <span>cards accepted :</span>
-                    
-                </div>
-                <div class="inputBox">
-                    <span>name on card :</span>
-                    <input type="text" placeholder="mr. john deo">
-                </div>
-                <div class="inputBox">
-                    <span>credit card number :</span>
-                    <input type="number" placeholder="1111-2222-3333-4444">
-                </div>
-                <div class="inputBox">
-                    <span>exp month :</span>
-                    <input type="text" placeholder="january">
-                </div>
-
-                <div class="flex">
-                    <div class="inputBox">
-                        <span>exp year :</span>
-                        <input type="number" placeholder="2022">
-                    </div>
-                    <div class="inputBox">
-                        <span>CVV :</span>
-                        <input type="text" placeholder="1234">
-                    </div>
-                </div>
-
+            <div class="inputBox">
+              <span>zip code :</span>
+              <input type="text" placeholder="123 456">
             </div>
-    
+          </div>
+
         </div>
 
-        <input type="submit" value="proceed to checkout" class="submit-btn">
+        <div class="col">
+
+          <h3 class="title">payment</h3>
+
+          <div class="inputBox">
+            <span>cards accepted :</span>
+
+          </div>
+          <div class="inputBox">
+            <span>name on card :</span>
+            <input type="text" placeholder="mr. john deo">
+          </div>
+          <div class="inputBox">
+            <span>credit card number :</span>
+            <input type="number" placeholder="1111-2222-3333-4444">
+          </div>
+          <div class="inputBox">
+            <span>exp month :</span>
+            <input type="text" placeholder="january">
+          </div>
+
+          <div class="flex">
+            <div class="inputBox">
+              <span>exp year :</span>
+              <input type="number" placeholder="2022">
+            </div>
+            <div class="inputBox">
+              <span>CVV :</span>
+              <input type="text" placeholder="1234">
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <input type="submit" value="proceed to checkout" class="submit-btn">
 
     </form>
 
-</div> 
+  </div>
 
- 
-    <button>Place Order</button>
-{% endblock %}
+  {% endblock %}
