--- a/Website/users/templates/users/BuyNow.html
+++ b/Website/users/templates/users/BuyNow.html
@@ -34,8 +34,8 @@
 
   <div class="container">
 
-    <form action="">
-
+    <form action="{% url 'BuyNow' username=request.user.username %}" method="post">
+      {% csrf_token %}
       <div class="row">
 
         <div class="col">
@@ -44,73 +44,44 @@
 
           <div class="inputBox">
             <span>full name :</span>
-            <input type="text" placeholder="Name">
+            <input type="text" placeholder="Name" name="name" required>
           </div>
           <div class="inputBox">
             <span>email :</span>
-            <input type="email" placeholder="example@example.com">
+            <input type="email" placeholder="example@example.com" name="email" required>
           </div>
           <div class="inputBox">
             <span>address :</span>
-            <input type="text" placeholder="room - street - locality">
+            <input type="text" placeholder="room - street - locality" name="address" required>
           </div>
           <div class="inputBox">
             <span>city :</span>
-            <input type="text" placeholder="pune">
+            <input type="text" placeholder="pune" name="city" required>
           </div>
 
           <div class="flex">
             <div class="inputBox">
               <span>state :</span>
-              <input type="text" placeholder="india">
+              <input type="text" placeholder="" name="state" required>
             </div>
             <div class="inputBox">
               <span>zip code :</span>
-              <input type="text" placeholder="123 456">
+              <input type="text" placeholder="123 456" name="zip_code" required>
             </div>
           </div>
 
         </div>
 
         <div class="col">
-
-          <h3 class="title">payment</h3>
-
           <div class="inputBox">
-            <span>cards accepted :</span>
-
+            <span>phone number</span>
+            <input type="text" name="phone" required>
           </div>
-          <div class="inputBox">
-            <span>name on card :</span>
-            <input type="text" placeholder="mr. john deo">
-          </div>
-          <div class="inputBox">
-            <span>credit card number :</span>
-            <input type="number" placeholder="1111-2222-3333-4444">
-          </div>
-          <div class="inputBox">
-            <span>exp month :</span>
-            <input type="text" placeholder="january">
-          </div>
-
-          <div class="flex">
-            <div class="inputBox">
-              <span>exp year :</span>
-              <input type="number" placeholder="2022">
-            </div>
-            <div class="inputBox">
-              <span>CVV :</span>
-              <input type="text" placeholder="1234">
-            </div>
-          </div>
-
         </div>
       </div>
 
-      <input type="submit" value="proceed to checkout" class="submit-btn">
+      <button type="submit" class="btn" >Submit</button>
+      </form>
 
-    </form>
-
-  </div>
 
   {% endblock %}
