--- a/Website/users/templates/users/layout.html
+++ b/Website/users/templates/users/layout.html
@@ -8,7 +8,8 @@
     <title>Lifestyles Mens</title>
     <link rel="stylesheet" type="text/css" href="{% static 'users/styles.css' %}">   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <header>
