--- a/Website/users/templates/users/product.html
+++ b/Website/users/templates/users/product.html
@@ -34,8 +34,8 @@
                 </div>
                 <input type="hidden" name="action" value="Add-to-Cart">
                 <button type="submit">Add to Cart</button>
-            <!-- </form>
-                <form action="{% url 'product' kurta_id=kurta.id %}", method="post">
+            </form>
+            <!--     <form action="{% url 'product' kurta_id=kurta.id %}", method="post">
                 {% csrf_token %}
                 <input type="hidden" name="action" value="Buy Now">
                 <button type="submit">Buy Now</button>
